Tiny tweaks to on single blog posts to fix some padding and alignment

--- a/assets/sass/cds/_blog.scss
+++ b/assets/sass/cds/_blog.scss
@@ -190,6 +190,15 @@
   }
 }
 
+.blog-single {
+  padding-top: 4rem;
+
+  .container {
+    // more css shenanigans for grid alignment stuff btwen bootstrap and GCDS
+    padding: 0 30px;
+  }
+}
+
 article.post {
 
   img {
